--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,35 +13,100 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
-    <ListView android:id="@+id/in"
+    android:gravity="center|left|right"
+    android:orientation="vertical" >
+    
+    <TextView
+                android:id="@+id/textViewRonCloud"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="h" />
+    
+
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/patient_id" />
+
+            <Spinner
+                android:id="@+id/spinnerPatients"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:prompt="@string/patientprompt" />
+        </TableRow>
+
+    </TableLayout>
+
+    <ListView
+        android:id="@+id/in"
+        android:layout_width="match_parent"
+        android:layout_height="135dp"
         android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll"
-        android:layout_weight="1"
-    />
+        android:transcriptMode="alwaysScroll" />
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/textViewHquote"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/hquote"
+                android:textSize="20sp" />
+
+	   <TextView
+	       android:id="@+id/textViewHvalue"
+	       android:layout_width="wrap_content"
+	       android:layout_height="wrap_content"
+	       android:text="@string/hvalue"
+	       android:textSize="30sp" />
+            
+        </TableRow>
+
+    </TableLayout>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addRecord"
+        android:text="@string/button_add" />
+
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
-        >
-        <EditText android:id="@+id/edit_text_out"
+        android:orientation="horizontal"
+        android:visibility="invisible" >
+
+        <EditText
+            android:id="@+id/edit_text_out"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="bottom"
-        />
-        <Button android:id="@+id/button_send"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/button_send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/send"
-        />
+            android:text="@string/send" />
     </LinearLayout>
+
 </LinearLayout>
